# BISOU-sky

./: README.md  pyproject.toml  setup.py
bisou_sky/: __init__.py  generate_sky.py
bisou_sky/data/: extragalactic_co_template.txt
examples/: HFI_Mask_GalPlane-apo0_0064_R2.00.fits  generate_sky.py  test_input_sky.ipynb
